# project_1

./: README.md  logger.py  main.py  pyproject.toml
src/: file_reader.py  main.py  services.py  utils.py  views.py
tests/: conftest.py  test_file_reader.py  test_utils.py
