[project]
name = "project-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexey Kultaev",email = "kav7270@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
mypy = "^1.16.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
black = "^25.1.0"

